:art:优化了整体架构 :fire:删除了示例项目文件，改用test目录 :sparkles:新增协议定义